// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders buy checkout card correctly 1`] = `
<div
  className="MuiBox-root css-ufn7cb"
  data-testid="checkout-card"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-tc7jh2-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <span
        className="MuiTypography-root MuiTypography-caption1 css-1rlo75h-MuiTypography-root"
        data-testid="Hello"
        style={
          {
            "color": "#7D7D89",
          }
        }
      >
        You are buying
      </span>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <h6
        className="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        data-testid="Hello"
      >
        0.023451 
      </h6>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <span
        className="MuiTypography-root MuiTypography-caption1 css-1rlo75h-MuiTypography-root"
        data-testid="Hello"
        style={
          {
            "color": "#7D7D89",
          }
        }
      >
        1 = $3,406,069.54
      </span>
    </div>
  </div>
  <div
    className="MuiBox-root css-iwz9lp"
  >
    <div>
      <div
        className="MuiBox-root css-15budcu"
        data-testid="transaction-stepper"
      >
        <div
          className="MuiBox-root css-1oyjow8"
        >
          <div
            className="MuiBox-root css-1j5om8t"
          >
            <div>
              <img
                alt="icon"
                className="css-8fono5"
                data-testid="iconComponent"
                height="32px"
                src={
                  {
                    "process": [Function],
                  }
                }
                width="32px"
              />
            </div>
          </div>
          <div
            className="MuiBox-root css-15budcu"
          >
            <span
              className="MuiTypography-root MuiTypography-caption2 css-opfv3y-MuiTypography-root"
              data-testid="Hello"
              style={
                {
                  "color": "#7D7D89",
                }
              }
            >
              Payment method
            </span>
            <p
              className="MuiTypography-root MuiTypography-body1 css-4umqm8-MuiTypography-root"
              data-testid="Hello"
              style={
                {
                  "color": "#343446",
                }
              }
            >
              Visa credit ...8845
            </p>
          </div>
        </div>
        <div>
          <img
            alt="icon"
            className="css-1jmoofa"
            data-testid="iconComponent"
            height="40px"
            src={
              {
                "process": [Function],
              }
            }
            width="40px"
          />
        </div>
        <div
          className="MuiBox-root css-1oyjow8"
        >
          <div
            className="MuiBox-root css-1j5om8t"
          >
            <div>
              <img
                alt="icon"
                className="css-8fono5"
                data-testid="iconComponent"
                height="32px"
                src={
                  {
                    "process": [Function],
                  }
                }
                width="32px"
              />
            </div>
          </div>
          <div
            className="MuiBox-root css-15budcu"
          >
            <span
              className="MuiTypography-root MuiTypography-caption2 css-opfv3y-MuiTypography-root"
              data-testid="Hello"
              style={
                {
                  "color": "#7D7D89",
                }
              }
            >
              Delivery fees
            </span>
            <p
              className="MuiTypography-root MuiTypography-body1 css-4umqm8-MuiTypography-root"
              data-testid="Hello"
              style={
                {
                  "color": "#343446",
                }
              }
            >
              0.001 
            </p>
          </div>
        </div>
        <div>
          <img
            alt="icon"
            className="css-1jmoofa"
            data-testid="iconComponent"
            height="40px"
            src={
              {
                "process": [Function],
              }
            }
            width="40px"
          />
        </div>
        <div
          className="MuiBox-root css-1oyjow8"
        >
          <div
            className="MuiBox-root css-1j5om8t"
          >
            <div>
              <img
                alt="icon"
                className="css-8fono5"
                data-testid="iconComponent"
                height="32px"
                src={
                  {
                    "process": [Function],
                  }
                }
                width="32px"
              />
            </div>
          </div>
          <div
            className="MuiBox-root css-15budcu"
          >
            <span
              className="MuiTypography-root MuiTypography-caption2 css-opfv3y-MuiTypography-root"
              data-testid="Hello"
              style={
                {
                  "color": "#7D7D89",
                }
              }
            >
              Deposit to
            </span>
            <p
              className="MuiTypography-root MuiTypography-body1 css-4umqm8-MuiTypography-root"
              data-testid="Hello"
              style={
                {
                  "color": "#343446",
                }
              }
            >
               Wallet
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-dlxwab-MuiStack-root"
  >
    <div
      className="css-m69qwo-MuiStack-root"
    >
      <span
        className="MuiTypography-root MuiTypography-overline css-1a2m3r9-MuiTypography-root"
        data-testid="Hello"
      >
        0.023451 
      </span>
      <div>
        <img
          alt="icon"
          className="css-omu3pj"
          data-testid="iconComponent"
          height="5px"
          src={
            {
              "process": [Function],
            }
          }
          width="330px"
        />
      </div>
      <span
        className="MuiTypography-root MuiTypography-overline css-1tl9of-MuiTypography-root"
        data-testid="Hello"
      >
        $79,875.74
      </span>
    </div>
    <div
      className="css-m69qwo-MuiStack-root"
    >
      <span
        className="MuiTypography-root MuiTypography-overline css-1a2m3r9-MuiTypography-root"
        data-testid="Hello"
      >
        transaction fee
      </span>
      <div>
        <img
          alt="icon"
          className="css-a7jzyd"
          data-testid="iconComponent"
          height="5px"
          src={
            {
              "process": [Function],
            }
          }
          width="333px"
        />
      </div>
      <span
        className="MuiTypography-root MuiTypography-overline css-1tl9of-MuiTypography-root"
        data-testid="Hello"
      >
        $1,000.00
      </span>
    </div>
    <div
      className="css-m69qwo-MuiStack-root"
    >
      <span
        className="MuiTypography-root MuiTypography-overline css-1a2m3r9-MuiTypography-root"
        data-testid="Hello"
      >
        Total
      </span>
      <div>
        <img
          alt="icon"
          className="css-h8nm0t"
          data-testid="iconComponent"
          height="5px"
          src={
            {
              "process": [Function],
            }
          }
          width="350px"
        />
      </div>
      <p
        className="MuiTypography-root MuiTypography-body1 css-1xlhzrv-MuiTypography-root"
        data-testid="Hello"
      >
        $80,875.74
      </p>
    </div>
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1lvca97-MuiButtonBase-root-MuiButton-root"
      data-testid="button"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      BUY NOW
    </button>
  </div>
</div>
`;

exports[`renders sell checkout card correctly 1`] = `
<div
  className="MuiBox-root css-ufn7cb"
  data-testid="checkout-card"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-tc7jh2-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <span
        className="MuiTypography-root MuiTypography-caption1 css-1rlo75h-MuiTypography-root"
        data-testid="Hello"
        style={
          {
            "color": "#7D7D89",
          }
        }
      >
        You are selling
      </span>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <h6
        className="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        data-testid="Hello"
      >
        0.023451 
      </h6>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <span
        className="MuiTypography-root MuiTypography-caption1 css-1rlo75h-MuiTypography-root"
        data-testid="Hello"
        style={
          {
            "color": "#7D7D89",
          }
        }
      >
        1 = $3,406,069.54
      </span>
    </div>
  </div>
  <div
    className="MuiBox-root css-iwz9lp"
  >
    <div>
      <div
        className="MuiBox-root css-15budcu"
        data-testid="transaction-stepper"
      >
        <div
          className="MuiBox-root css-1oyjow8"
        >
          <div
            className="MuiBox-root css-1j5om8t"
          >
            <div>
              <img
                alt="icon"
                className="css-8fono5"
                data-testid="iconComponent"
                height="32px"
                src={
                  {
                    "process": [Function],
                  }
                }
                width="32px"
              />
            </div>
          </div>
          <div
            className="MuiBox-root css-15budcu"
          >
            <span
              className="MuiTypography-root MuiTypography-caption2 css-opfv3y-MuiTypography-root"
              data-testid="Hello"
              style={
                {
                  "color": "#7D7D89",
                }
              }
            >
              Payment method
            </span>
            <p
              className="MuiTypography-root MuiTypography-body1 css-4umqm8-MuiTypography-root"
              data-testid="Hello"
              style={
                {
                  "color": "#343446",
                }
              }
            >
              Visa credit ...8845
            </p>
          </div>
        </div>
        <div>
          <img
            alt="icon"
            className="css-1jmoofa"
            data-testid="iconComponent"
            height="40px"
            src={
              {
                "process": [Function],
              }
            }
            width="40px"
          />
        </div>
        <div
          className="MuiBox-root css-1oyjow8"
        >
          <div
            className="MuiBox-root css-1j5om8t"
          >
            <div>
              <img
                alt="icon"
                className="css-8fono5"
                data-testid="iconComponent"
                height="32px"
                src={
                  {
                    "process": [Function],
                  }
                }
                width="32px"
              />
            </div>
          </div>
          <div
            className="MuiBox-root css-15budcu"
          >
            <span
              className="MuiTypography-root MuiTypography-caption2 css-opfv3y-MuiTypography-root"
              data-testid="Hello"
              style={
                {
                  "color": "#7D7D89",
                }
              }
            >
              Delivery fees
            </span>
            <p
              className="MuiTypography-root MuiTypography-body1 css-4umqm8-MuiTypography-root"
              data-testid="Hello"
              style={
                {
                  "color": "#343446",
                }
              }
            >
              0.001 
            </p>
          </div>
        </div>
        <div>
          <img
            alt="icon"
            className="css-1jmoofa"
            data-testid="iconComponent"
            height="40px"
            src={
              {
                "process": [Function],
              }
            }
            width="40px"
          />
        </div>
        <div
          className="MuiBox-root css-1oyjow8"
        >
          <div
            className="MuiBox-root css-1j5om8t"
          >
            <div>
              <img
                alt="icon"
                className="css-8fono5"
                data-testid="iconComponent"
                height="32px"
                src={
                  {
                    "process": [Function],
                  }
                }
                width="32px"
              />
            </div>
          </div>
          <div
            className="MuiBox-root css-15budcu"
          >
            <span
              className="MuiTypography-root MuiTypography-caption2 css-opfv3y-MuiTypography-root"
              data-testid="Hello"
              style={
                {
                  "color": "#7D7D89",
                }
              }
            >
              Deposit to
            </span>
            <p
              className="MuiTypography-root MuiTypography-body1 css-4umqm8-MuiTypography-root"
              data-testid="Hello"
              style={
                {
                  "color": "#343446",
                }
              }
            >
               Wallet
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-dlxwab-MuiStack-root"
  >
    <div
      className="css-m69qwo-MuiStack-root"
    >
      <span
        className="MuiTypography-root MuiTypography-overline css-1a2m3r9-MuiTypography-root"
        data-testid="Hello"
      >
        0.023451 
      </span>
      <div>
        <img
          alt="icon"
          className="css-omu3pj"
          data-testid="iconComponent"
          height="5px"
          src={
            {
              "process": [Function],
            }
          }
          width="330px"
        />
      </div>
      <span
        className="MuiTypography-root MuiTypography-overline css-1tl9of-MuiTypography-root"
        data-testid="Hello"
      >
        $79,875.74
      </span>
    </div>
    <div
      className="css-m69qwo-MuiStack-root"
    >
      <span
        className="MuiTypography-root MuiTypography-overline css-1a2m3r9-MuiTypography-root"
        data-testid="Hello"
      >
        transaction fee
      </span>
      <div>
        <img
          alt="icon"
          className="css-a7jzyd"
          data-testid="iconComponent"
          height="5px"
          src={
            {
              "process": [Function],
            }
          }
          width="333px"
        />
      </div>
      <span
        className="MuiTypography-root MuiTypography-overline css-1tl9of-MuiTypography-root"
        data-testid="Hello"
      >
        $1,000.00
      </span>
    </div>
    <div
      className="css-m69qwo-MuiStack-root"
    >
      <span
        className="MuiTypography-root MuiTypography-overline css-1a2m3r9-MuiTypography-root"
        data-testid="Hello"
      >
        Total
      </span>
      <div>
        <img
          alt="icon"
          className="css-h8nm0t"
          data-testid="iconComponent"
          height="5px"
          src={
            {
              "process": [Function],
            }
          }
          width="350px"
        />
      </div>
      <p
        className="MuiTypography-root MuiTypography-body1 css-1xlhzrv-MuiTypography-root"
        data-testid="Hello"
      >
        $78,875.74
      </p>
    </div>
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1geq681-MuiButtonBase-root-MuiButton-root"
      data-testid="button"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      SELL NOW
      <span
        className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
